# esp32s3aprs

./: .gitmodules  CHANGE.txt  CMakeLists.txt  NOTICE.txt  README.md  audio-input-52K8.grc  init.sh  manifest.py  nvs.csv  partitions-1M.csv  partitions-2M.csv  sdkconfig.defaults
SA8x8/: CMakeLists.txt  SA8x8.c  gpio.c  receiver.c  transmiter.c  uart.c
SA8x8/include/: SA8x8.h
SA8x8/include_priv/: SA8x8_priv.h
dmabuff/: CMakeLists.txt  dmabuff.c
dmabuff/include/: dmabuff.h
hardware/: ESP32_S3_WROOM.kicad_sch  ESP32s3APRS.csv  ESP32s3APRS.kicad_pcb  ESP32s3APRS.kicad_pro  ESP32s3APRS.kicad_sch  L86_M33.kicad_sch  MAX77757.kicad_sch  NOTICE.txt  SA8x8.kicad_sch  epd.kicad_sch
lowpower/: CMakeLists.txt  lowpower.c
lowpower/include/: lowpower.h
lowpower/riscv/: main.c
main/: CMakeLists.txt  Kconfig  adc.c  adc.h  afsk_config.h  afsk_demod.c  afsk_demod.h  afsk_mod.c  afsk_mod.h  aprs.c  aprs.h  aprs_encoder.c  aprs_encoder.h  aprs_log.c  aprs_log.h  aprs_parsers.c  aprs_parsers.h  ax25.c  ax25.h  ax25_lm.c  ax25_lm.h  ax25_phy.c  ax25_phy.h  ax25_phy_simplex.c  ax25_phy_simplex.h  config.c  config.h  fir.c  fir.h  framebuff.c  framebuff.h  goertzel_decimate.S  gps.c  gps.h  gps_parsers.c  gps_parsers.h  hdlc_dec.c  hdlc_dec.h  hdlc_enc.c  hdlc_enc.h  (+23 more)
main/lv_theme/: lv_theme_mono_epd.c  lv_theme_mono_epd.h
main/xbm/: Symbols_1.xbm  antenna_0.xbm  antenna_1.xbm  antenna_2.xbm  antenna_3.xbm  antenna_4.xbm  antenna_5.xbm  file-xbm-bigendian-option.patch  logo.xbm  logo.xcf  symbols1.xbm  symbols1.xcf  symbols2.xbm  symbols2.xcf
micropython/: CMakeLists.txt  Kconfig  LICENSE  berkeley_db_config_port.h  micropython.c  micropython.h  mpconfigboard.h  mpconfigport.h  mphalport.h  poll.h
modules/esp32s3aprs/: esp32s3aprs.c  esp32s3aprs.cmake  mp_aprs.c  mp_aprs.h  mp_aprs_position.c  mp_aprs_station.c  mp_aprs_stations_db.c  mp_ax25_addr.c  mp_ax25_addr.h  mp_radio.c  mp_radio.h  mp_templ.c  mp_templ.h
modules/freeze/: _boot.py
spiffs/: boot.py  main.py
ssd1680/: CMakeLists.txt  ssd1680.c
ssd1680/include/: ssd1680.h  ssd1680_def.h
